ManyToOne relationship works

--- a/src/Ensiie/IaatoBundle/Resources/views/Iaato/index.html.twig
+++ b/src/Ensiie/IaatoBundle/Resources/views/Iaato/index.html.twig
@@ -11,6 +11,6 @@
     {% for ship in ships %}
       <tr>  
         <th> {{ ship.name }} </th>
-        <th> {{ ship.company.name }} </th>
+        <th> {{ ship.company.getName() }} </th>
     {% endfor %}
 {% endblock %}
