Added ship to entity user & added links in main layout

--- a/src/Ensiie/IaatoBundle/Resources/views/Iaato/account.html.twig
+++ b/src/Ensiie/IaatoBundle/Resources/views/Iaato/account.html.twig
@@ -4,7 +4,8 @@
     
     <div id="account-info">
 	Name: {{ app.user.username }} <br>
-	Email: {{ app.user.email }}
+	Email: {{ app.user.email }} <br>
+	My ship: {{ app.user.ship.getName() }}
 	
     </div>
 
