--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -25,7 +25,8 @@
 	      {% if is_granted('ROLE_ADMIN') %}
 	            <a href="{{ path('iaato_admin') }}"> - Admin</a>
 	      {% endif %}
-
+	
+	      <a href="{{ path('iaato_homepage') }}" > - Account </a>
 	      <a href="{{ path('iaato_planning') }}" > - Planning</a>
 
 	      <div id="content" class="nav nav-pills nav-stacked">
