Added sort by my ship for planning

--- a/src/Ensiie/IaatoBundle/Resources/views/Iaato/planning.html.twig
+++ b/src/Ensiie/IaatoBundle/Resources/views/Iaato/planning.html.twig
@@ -7,6 +7,8 @@
     <a href="{{ path('iaato_planning', { 'sort':'ship'}) }}" > Sort by ship</a>
     |
     <a href="{{ path('iaato_planning', { 'sort':'company'} ) }}" > Sort by company</a>
+    |
+    <a href="{{ path('iaato_planning', {'sort':'me'} ) }}"> My ship </a>
     </div>
 
     <table class="table table-hover table-bordered" style:";background-color:white;">
