--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -6,41 +6,52 @@
     <title>{% block title %}IAATO{% endblock %}</title>
  
     {% block stylesheets %}
-      <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap.css') }}" type="text/css" />
+      <meta charset="UTF-8" />
+        <link href="{{ asset('bootstrap/css/bootstrap.css') }}" rel="stylesheet" media="screen">
+        <link href="{{ asset('bootstrap/css/update.css') }}" rel="stylesheet" media="screen">
+         
     {% endblock %}
   </head>
  
   <body>
-      <div class="container">
-	      <div id="header" class="hero-unit">
-		<h1> IAATO </h1>
-	      	<p> Shipping in Antartica. </p>
-	      </div>
+<div class="navbar navbar">
+    <div class="navbar-inner">
+      
+      <div >
+        <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="brand" href="{{ path('iaato_homepage') }}">IAATO</a>
+        <div class="">
+          <ul class="nav">
 	      {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                    Logged as {{ app.user.username }} - <a href="{{ path('fos_user_security_logout') }}">Logout</a>
+                    <li> <a href="{{ path('iaato_homepage') }}" > Logged as {{ app.user.username }} </a> </li> </li>                  
+                    <li> <a href="{{ path('iaato_planning') }}" > Planning</a> </li>
+                   {% if is_granted('ROLE_ADMIN') %}
+                      <li>  <a href="{{ path('iaato_admin') }}"> Admin</a> </li>
+                   {% endif %}
+                   <li> <a class="btn btn-danger" href="{{ path('fos_user_security_logout') }}">Logout</a> </li>
               {% else %}
-                    <a href="{{ path('fos_user_security_login') }}">Login</a>
-              {% endif %}
-	      
-	      {% if is_granted('ROLE_ADMIN') %}
-	            <a href="{{ path('iaato_admin') }}"> - Admin</a>
-	      {% endif %}
-	
-	      <a href="{{ path('iaato_homepage') }}" > - Account </a>
-	      <a href="{{ path('iaato_planning') }}" > - Planning</a>
-
-	      <div id="content" class="nav nav-pills nav-stacked">
-		      <hr>
-		      {% block body %}
-	              {% endblock %}
- 	      </div>
- 
-        <footer>
-	<hr>
-	<p>IAATO</p>
-	</footer>
-
-     </div>
+                   <li> <a href="{{ path('fos_user_security_login') }}">Login</a> </li>
+              {% endif %}	      	  
+	     
+             </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+	      <div class="row-fluid">
+                <div class="container-fluid">
+                    <div class="span10" >
+                         <div class="well">
+                          {% block body %}
+                          {% endblock %}
+                          </div>
+                   </div>
+ 	      </div>    
+            </div>
   {% block javascripts %}
     {# Ajoutez ces lignes JavaScript si vous comptez vous servir des fonctionnalités du bootstrap Twitter #}
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
