--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -35,23 +35,37 @@
                    <li> <a class="btn btn-danger" href="{{ path('fos_user_security_logout') }}">Logout</a> </li>
               {% else %}
                    <li> <a href="{{ path('fos_user_security_login') }}">Login</a> </li>
-              {% endif %}	      	  
-	     
-             </ul>
+              {% endif %}	      	  	     
+          </ul>
             </div>
-          </div>
         </div>
       </div>
-	      <div class="row-fluid">
-                <div class="container-fluid">
-                    <div class="span10" >
-                         <div class="well">
-                          {% block body %}
-                          {% endblock %}
-                          </div>
-                   </div>
- 	      </div>    
-            </div>
+    </div>
+      
+      <div class="row-fluid">
+        <div class="container-fluid">
+        {% block subnav %}
+          <div class="span2" >
+            <ul class="menu nav nav-list" style="">
+              <li class="nav-header"> My Account </li>
+                                         
+              <li> <a href="{{ path('fos_user_profile_show') }}">View my profile</a></li>
+              <li> <a href="{{ path('fos_user_profile_edit') }}">Edit my profile</a></li>
+              <li> <a href="{{ path('fos_user_change_password') }}">Change password</a></li>
+              <li> <a href="{{ path('fos_user_resetting_request') }}">Reset my password</a></li>
+
+            </ul>
+          </div>
+          {% endblock %}
+              
+      <div class="span10" >
+        <div class="well">
+        {% block body %}
+        {% endblock %}
+        </div>
+      </div>
+  </div>
+</div>
   {% block javascripts %}
     {# Ajoutez ces lignes JavaScript si vous comptez vous servir des fonctionnalités du bootstrap Twitter #}
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
