--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -43,8 +43,9 @@
     </div>
       
       <div class="row-fluid">
-        <div class="container-fluid">
+        
         {% block subnav %}
+        <div class="container-fluid">
         {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
           <div class="span2" >
             <ul class="menu nav nav-list" style="">
@@ -54,7 +55,12 @@
               <li> <a href="{{ path('fos_user_profile_edit') }}">Edit my profile</a></li>
               <li> <a href="{{ path('fos_user_change_password') }}">Change password</a></li>
               <li> <a href="{{ path('fos_user_resetting_request') }}">Reset my password</a></li>
+              
 
+              <li class="nav-header"> Planning </li>
+
+              <li> <a href="{{ path('iaato_planning') }}">View the planning</a></li>
+              <li> <a href="{{ path('iaato_request_free_sites') }}">View the free sites</a></li>
             </ul>
           </div>
           {% endif %}
