Added link to add planning

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -61,6 +61,7 @@
 
               <li> <a href="{{ path('iaato_planning') }}">View the planning</a></li>
               <li> <a href="{{ path('iaato_request_free_sites') }}">View the free sites</a></li>
+              <li> <a href="{{ path('iaato_add_planning') }}">Add a planning</a></li>
             </ul>
           </div>
           {% endif %}
